Open more packages and remove most streams tests from test exclusion list